--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "react-router-dom": "^4.3.1",
     "react-table": "^6.8.6",
     "reactjs-popup": "^1.3.1",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "xlsx-populate": "^1.19.1"
   },
   "build": {
     "appId": "com.karmadust.electrate",
