ci: update gulp to 4.0.2

--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "gulp": "./node_modules/.bin/gulp",
     "electron-packager": "./node_modules/.bin/electron-packager",
-	"postinstall": "install-app-deps",
-	"build:watch": "gulp build-watch",
+    "postinstall": "install-app-deps",
+    "build:watch": "gulp build-watch",
     "build": "gulp copy && gulp build",
     "release": "npm run build && electron-packager ./ WebScraber --all --out dist --overwrite",
     "start": "npm run build && electron .",
+    "build:new": "gulp start && gulp runApp && gulp watchSTART",
     "test": "npm run lint && npm run build",
     "lint": "eslint --config .eslintrc.json --ignore-path .eslintignore ."
   },
@@ -38,11 +39,12 @@
     "eslint-config-google": "^0.11.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
-    "gulp": "^4.0.0",
+    "gulp": "^4.0.2",
     "gulp-babel": "^7.0.1",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
+    "gulp-run-electron": "^3.0.2",
     "gulp-sourcemaps": "^2.6.4",
     "jest": "^22.4.2",
     "react-test-renderer": "^16.2.0",
