--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build:watch": "gulp build-watch",
     "build": "gulp copy && gulp build",
     "release": "npm run build && electron-packager ./ WebScraber --all --out dist --overwrite",
-    "start": "npm run build && electron .",
-    "build:new": "gulp start && gulp runApp && gulp watchSTART",
+    "start": "gulp preStart && gulp start",
     "test": "npm run lint && npm run build",
     "lint": "eslint --config .eslintrc.json --ignore-path .eslintignore ."
   },
@@ -29,6 +28,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "del": "^5.0.0",
     "electron": "~1.8.2",
     "electron-builder": "^20.0.8",
     "electron-packager": "^12.2.0",
@@ -55,6 +55,7 @@
     "jsdom": "^13.0.0",
     "json2xls": "^0.1.2",
     "lowdb": "^1.0.0",
+    "md5": "^2.2.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.3.1",
