--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "release": "npm run build && electron-packager ./ WebScraber --all --out dist --overwrite",
     "start": "gulp preStart && gulp start",
     "test": "npm run lint && npm run build",
-    "lint": "eslint --config .eslintrc.json --ignore-path .eslintignore ."
+	"lint": "eslint --config .eslintrc.json --ignore-path .eslintignore .",
+	"lint:fix": "eslint --config .eslintrc.json --ignore-path .eslintignore . --fix"
   },
   "files": [
     "dist/",
@@ -22,6 +23,7 @@
   "author": "GitHub",
   "license": "MIT",
   "devDependencies": {
+    "@ljharb/eslint-config": "^13.1.1",
     "babel-core": "^6.26.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^22.4.1",
@@ -34,7 +36,11 @@
     "electron-packager": "^12.2.0",
     "electron-react-devtools": "^0.5.3",
     "eslint": "^5.8.0",
+    "eslint-config-exponent": "^5.1.3",
     "eslint-config-google": "^0.11.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-flowtype": "^3.11.1",
+    "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^4.0.0",
     "gulp": "^4.0.2",
