--- a/releaserc.json
+++ b/releaserc.json
@@ -1,12 +1,32 @@
 {
     "branch": "master",
+    "plugings": [
+        ["semantic-release/commit-analyzer", {
+            "preset": "angular",
+            "parserOpts": {
+              "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES", "BREAKING"]
+            }
+        }],
+        ["semantic-release/release-notes-generator", {
+            "preset": "angular",
+            "parserOpts": {
+              "noteKeywords": ["BREAKING CHANGE", "BREAKING CHANGES", "BREAKING"]
+            },
+            "writerOpts": {
+              "commitsSort": ["subject", "scope"]
+            }
+        }],
+        ["@semantic-release/changelog", {
+          "changelogFile": "CHANGELOG.md",
+          "changelogTitle": "# CHANGELOG"
+        }],
+        "@semantic-release/git",
+        "@semantic-release/github"
+    ],
     "verifyConditions": [
         "@semantic-release/changelog",
-        "@semantic-release/github",
-        "@semantic-release/git"
-    ],
-    "prepare": [
-        "@semantic-release/changelog"
+        "@semantic-release/git",
+        "@semantic-release/github"
     ],
     "analyzeCommits": {
         "releaseRules": [
@@ -52,7 +72,25 @@
             ]
         }
     },
+    "prepare": [
+        {
+            "path": "@semantic-release/changelog",
+            "changelogFile": "CHANGELOG.md",
+            "changelogTitle": "# CHANGELOG"
+        },
+        {
+            "path": "@semantic-release/git",
+            "assets": [
+                "CHANGELOG.md",
+                "package.json"
+            ]
+        }
+    ],
     "publish": [
-        "@semantic-release/github"
+        ["@semantic-release/github", {
+			"assets": [
+				{"path": "release/*.zip", "label": "Descktop distribution"}
+			]
+		}]
     ]
 }
