--- a/package.json
+++ b/package.json
@@ -1,94 +1,98 @@
 {
-  "name": "webscraper",
-  "version": "1.0.0",
-  "description": "WebScraber of www",
-  "main": "app/main.js",
-  "scripts": {
-    "gulp": "./node_modules/.bin/gulp",
-    "electron-packager": "./node_modules/.bin/electron-packager",
-    "postinstall": "install-app-deps",
-    "build": "gulp build",
-    "release": "npm run build && electron-packager ./ webscraper --all --out dist --overwrite && gulp release",
-    "start": "gulp start",
-    "test": "npm run lint && npm run build",
-    "lint": "eslint --config .eslintrc.json --ignore-path .eslintignore .",
-    "lint:fix": "eslint --config .eslintrc.json --ignore-path .eslintignore . --fix",
-    "semantic-release": "semantic-release"
-  },
-  "files": [
-    "dist/",
-    "README.md"
-  ],
-  "repository": "https://github.com/electron/electron-quick-start",
-  "author": "GitHub",
-  "license": "MIT",
-  "devDependencies": {
-    "@ljharb/eslint-config": "^13.1.1",
-    "@semantic-release/changelog": "^3.0.4",
-    "@semantic-release/git": "^7.0.16",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.8.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "del": "^5.0.0",
-    "electron": "~1.8.2",
-    "electron-builder": "^20.0.8",
-    "electron-packager": "^12.2.0",
-    "electron-react-devtools": "^0.5.3",
-    "eslint": "^5.8.0",
-    "eslint-config-exponent": "^5.1.3",
-    "eslint-config-google": "^0.11.0",
-    "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-flowtype": "^3.11.1",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-react": "^7.11.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^7.0.1",
-    "gulp-clean": "^0.4.0",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssmin": "^0.2.0",
-    "gulp-run-electron": "^3.0.2",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-zip": "^5.0.0",
-    "jest": "^24.8.0",
-    "react-test-renderer": "^16.2.0",
-    "semantic-release": "^15.13.14"
-  },
-  "dependencies": {
-    "@exponent/electron-cookies": "^2.0.0",
-    "electron-is-dev": "^0.3.0",
-    "fs-extra": "^7.0.0",
-    "image-downloader": "^3.4.1",
-    "jsdom": "^13.0.0",
-    "json2xls": "^0.1.2",
-    "lowdb": "^1.0.0",
-    "md5": "^2.2.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-router-dom": "^4.3.1",
-    "react-table": "^6.8.6",
-    "reactjs-popup": "^1.3.1",
-    "request-promise": "^4.2.2",
-    "xlsx-populate": "^1.19.1"
-  },
-  "build": {
-    "appId": "com.karmadust.electrate",
-    "productName": "Web Scraper",
-    "copyright": "2018",
-    "icon": "src/img/logo.png",
-    "buildVersion": "0.0.1",
-    "files": [
-      "app/**/*",
-      "node_modules/**/*",
-      "package.json"
-    ],
-    "ignore": [
-      "images/**/*",
-      "temp/**/*"
-    ],
-    "publish": null
-  }
+	"author": "Raman Lauryniuk <romanrostislavovich@gmail.com>",
+	"name": "webscraper",
+    "version": "0.0.0-development",
+	"description": "WebScraber of www",
+    "license": "MIT",
+    "repository": "svoboda-rabstvo/WebScraber",
+    "bugs": "https://github.com/svoboda-rabstvo/WebScraber/issues",
+    "bin": {
+        "ngx-translate-lint": "dist/bin.js"
+    },
+  	"main": "app/main.js",
+	"scripts": {
+		"gulp": "./node_modules/.bin/gulp",
+		"electron-packager": "./node_modules/.bin/electron-packager",
+		"postinstall": "install-app-deps",
+		"build": "gulp build",
+		"release": "npm run build && electron-packager ./ webscraper --all --out dist --overwrite && gulp release",
+		"start": "gulp start",
+		"test": "npm run lint && npm run build",
+		"lint": "eslint --config .eslintrc.json --ignore-path .eslintignore .",
+		"lint:fix": "eslint --config .eslintrc.json --ignore-path .eslintignore . --fix",
+		"semantic-release": "semantic-release"
+	},
+	"files": [
+		"release/",
+		"README.md"
+	],
+	"dependencies": {
+		"@exponent/electron-cookies": "^2.0.0",
+		"electron-is-dev": "^0.3.0",
+		"fs-extra": "^7.0.0",
+		"image-downloader": "^3.4.1",
+		"jsdom": "^13.0.0",
+		"json2xls": "^0.1.2",
+		"lowdb": "^1.0.0",
+		"md5": "^2.2.1",
+		"react": "^16.2.0",
+		"react-dom": "^16.2.0",
+		"react-router-dom": "^4.3.1",
+		"react-table": "^6.8.6",
+		"reactjs-popup": "^1.3.1",
+		"request-promise": "^4.2.2",
+		"xlsx-populate": "^1.19.1"
+	},
+	"devDependencies": {
+		"@ljharb/eslint-config": "^13.1.1",
+		"@semantic-release/changelog": "^3.0.4",
+		"@semantic-release/git": "^7.0.16",
+		"babel-core": "^6.26.0",
+		"babel-eslint": "^10.0.1",
+		"babel-jest": "^24.8.0",
+		"babel-preset-env": "^1.6.1",
+		"babel-preset-es2015": "^6.24.1",
+		"babel-preset-react": "^6.24.1",
+		"del": "^5.0.0",
+		"electron": "~1.8.2",
+		"electron-builder": "^20.0.8",
+		"electron-packager": "^12.2.0",
+		"electron-react-devtools": "^0.5.3",
+		"eslint": "^5.8.0",
+		"eslint-config-exponent": "^5.1.3",
+		"eslint-config-google": "^0.11.0",
+		"eslint-plugin-babel": "^5.3.0",
+		"eslint-plugin-flowtype": "^3.11.1",
+		"eslint-plugin-import": "^2.18.0",
+		"eslint-plugin-react": "^7.11.1",
+		"eslint-plugin-standard": "^4.0.0",
+		"gulp": "^4.0.2",
+		"gulp-babel": "^7.0.1",
+		"gulp-clean": "^0.4.0",
+		"gulp-concat": "^2.6.1",
+		"gulp-cssmin": "^0.2.0",
+		"gulp-run-electron": "^3.0.2",
+		"gulp-sourcemaps": "^2.6.4",
+		"gulp-zip": "^5.0.0",
+		"jest": "^24.8.0",
+		"react-test-renderer": "^16.2.0",
+		"semantic-release": "^15.13.14"
+	},
+	"build": {
+		"appId": "com.karmadust.electrate",
+		"productName": "Web Scraper",
+		"copyright": "2018",
+		"icon": "src/img/logo.png",
+		"buildVersion": "0.0.1",
+		"files": [
+		"app/**/*",
+		"node_modules/**/*",
+		"package.json"
+		],
+		"ignore": [
+		"images/**/*",
+		"temp/**/*"
+		],
+		"publish": null
+	}
 }
