--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: node_js
 node_js: stable
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq --install-recommends winehq-stable
 install: npm install
 
 jobs:
@@ -12,6 +15,5 @@ jobs:
       if: branch = master AND type = push
       node_js: stable
       script:
-        - sudo apt-get install --install-recommends winehq-stable
         - npm run release
         - npm run semantic-release
