feat: kreitspb: get possible colors and sizes of item

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"image-downloader": "^3.4.1",
 		"jsdom": "^13.0.0",
 		"json2xls": "^0.1.2",
+		"lodash": "^4.17.13",
 		"lowdb": "^1.0.0",
 		"md5": "^2.2.1",
 		"react": "^16.2.0",
