--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"react-table": "^6.8.6",
 		"reactjs-popup": "^1.3.1",
 		"request-promise": "^4.2.2",
+		"tough-cookie": "2.5.0",
 		"xlsx-populate": "^1.19.1"
 	},
 	"devDependencies": {
