--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,8 @@
         "max-len": "off",
         "no-unused-vars": 0,
 		"indent": ["error", "tab", { "SwitchCase": 1 }],
-		"no-tabs": 0
+		"no-tabs": 0,
+        "object-curly-spacing": [1, "always"]
     },
     "extends": "google"
 }
